--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 
-CSS/Eindopdracht/PortFolio/PortFolio.js
-CSS/Eindopdracht/PortFolio/Portfolio.html
-CSS/Eindopdracht/PortFolio/PortFolio.css
+.tmp.drivedownload/5314601.driveupload
+.tmp.drivedownload/8684651.driveupload
+Techgrounds.code-workspace
