--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,33 @@
 .tmp.drivedownload/5314601.driveupload
 .tmp.drivedownload/8684651.driveupload
 Techgrounds.code-workspace
+JavaScript/test.html
+JavaScript/Eindopdracht/Calculator/calculatorV2.html
+JavaScript/Eindopdracht/Sudoku/sudoku.js
+React/package-lock.json
+React/portfolio-elmer/
+React/portfolio-elmer-V2/
+
+package-lock.json
+JavaScript/test.html
+JavaScript/Eindopdracht/Calculator
+JavaScript/Eindopdracht/Calculator/calculator.html
+JavaScript/Eindopdracht/Calculator/font/minisystem.ttf
+JavaScript/Eindopdracht/PortFolio/PortFolio.css
+JavaScript/Eindopdracht/PortFolio/Portfolio.html
+JavaScript/Eindopdracht/PortFolio/PortFolio.js
+JavaScript/Eindopdracht/PortFolio/img/banner.jpg
+JavaScript/Eindopdracht/PortFolio/img/data.png
+JavaScript/Eindopdracht/PortFolio/img/elmer.jpeg
+JavaScript/Eindopdracht/PortFolio/img/WebDevolpment word cloud.png
+React/portfolio-elmer-v2/.gitignore
+React/portfolio-elmer-v2/package-lock.json
+React/portfolio-elmer-v2/package.json
+React/portfolio-elmer-v2/README.md
+React/portfolio-elmer-v2/public/favicon.ico
+React/portfolio-elmer-v2/public/index.html
+React/portfolio-elmer-v2/src/index.css
+React/portfolio-elmer-v2/src/logo.svg
+React/portfolio-elmer-v2/src/reportWebVitals.js
+React/portfolio-elmer-v2/src/setupTests.js
+
