--- a/React/portfolio-elmer-v2/package.json
+++ b/React/portfolio-elmer-v2/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.0",
     "reactjs-navbar": "^1.0.2",
