--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ React/portfolio-elmer/
 React/portfolio-elmer-V2/node_modules
 React/portfolio-elmer-v2/.gitignore
 React/portfolio-elmer-v2/README.md
-React/portfolio-elmer-v2/src/index.css
 React/portfolio-elmer-v2/src/logo.svg
 React/portfolio-elmer-v2/src/reportWebVitals.js
 React/portfolio-elmer-v2/src/setupTests.js
 
+React/portfolio-elmer-v2/src/config.js
