--- a/React/portfolio-elmer-v2/package.json
+++ b/React/portfolio-elmer-v2/package.json
@@ -3,22 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@material/textfield": "^8.0.0",
     "@statickit/react": "^2.1.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "framer": "^1.2.9",
     "framer-motion": "^2.9.4",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.14",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^3.11.0",
+    "react-native-animated-linear-gradient": "^1.2.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.0",
     "reactjs-navbar": "^1.0.2",
+    "use-dencrypt-effect": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
