--- a/React/portfolio-elmer-v2/package.json
+++ b/React/portfolio-elmer-v2/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
+    "emailjs-com": "^2.6.3",
     "express": "^4.17.1",
     "framer": "^1.2.9",
     "framer-motion": "^2.9.4",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.14",
     "react": "^17.0.1",
+    "react-back-to-top-button": "0.0.14",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -26,6 +28,8 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.0",
+    "react-scroll-up-button": "^1.6.4",
+    "react-toastify": "^6.1.0",
     "reactjs-navbar": "^1.0.2",
     "use-dencrypt-effect": "^1.0.2",
     "web-vitals": "^0.2.4"
