--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
-.tmp.drivedownload/5314601.driveupload
-.tmp.drivedownload/8684651.driveupload
+.tmp.drivedownload
 Techgrounds.code-workspace
+JavaScript/Eindopdracht/Calculator/calculatorV2.html
+.gitignore
+
