--- a/Java/CheckAssignment/pom.xml
+++ b/Java/CheckAssignment/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
+            <version>5.3</version>
         </dependency>
     </dependencies>
 
